# photo-processor

./: README.md  pyproject.toml
photo_processor/: main.py
photo_processor/organise/: __init__.py
tests/organise/: test_ordering.py
